--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,7 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:24.2.1'
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:design:23.1.1'
+    compile 'com.android.support:design:24.1.1'
     compile 'io.reactivex:rxandroid:1.2.0'
     compile 'io.reactivex:rxjava:1.1.5'
     compile 'com.squareup.retrofit2:retrofit:2.0.2'
@@ -38,5 +38,6 @@ dependencies {
     compile 'com.github.pinball83:masked-edittext:1.0.3'
     compile 'com.github.dmytrodanylyk.circular-progress-button:library:1.1.3'
     compile 'com.github.medyo:fancybuttons:1.8.3'
+    compile 'com.heinrichreimersoftware:material-intro:1.6'
 
 }
