--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,14 +12,15 @@
         >
         <activity android:name=".MainActivity"
                   android:windowSoftInputMode="stateVisible">
-
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity android:name=".WelcomeScreen">
+        </activity>
+        <activity android:name=".Main">
         </activity>
     </application>
 
